--- a/styles/website.css
+++ b/styles/website.css
@@ -3,7 +3,7 @@
     font-family: 'PT Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 1.625rem;
     font-style: bold;
-    margin-left: -16px;
+    margin-left: -8px;
 }
 
 .lvm-task-number p:before {
